--- a/style.css
+++ b/style.css
@@ -1347,7 +1347,7 @@ a i{
   padding: 20px;
   position: absolute;
   padding-top: 5px;
-  height: 150vh;
+  height: 130vh;
   width: 100%;
   top: 10%;
   justify-content: flex-start;
@@ -1381,26 +1381,6 @@ a i{
 
 .app-text h3{
   padding-bottom: 0px;
-}
-
-.download-button {
-  text-align: center;
-  font-style: italic;
-}
-
-.btn {
-  background-color: #4A235A;
-  border: none;
-  color: #f4f4f4;
-  padding: 12px 30px;
-  cursor: pointer;
-  font-size: 20px;
-  border-radius: 2px;
-}
-.btn:hover{
-  background-color: #8E44AD;
-  border: none;
-  color: white;
 }
 /* End - app */
 
@@ -1450,8 +1430,8 @@ input[type=text], select, textarea {
 }
 
 input[type=submit] {
-  background-color: #4A235A;
-  color: #f4f4f4;
+  background-color: #1d322b;
+  color: white;
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
@@ -1459,8 +1439,8 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color: #8E44AD;
-  color: white;
+  background-color: #ccb8a8;
+  color: #1d322b;
 }
 /* End contact contact-form */
 
