--- a/style.css
+++ b/style.css
@@ -1347,7 +1347,7 @@ a i{
   padding: 20px;
   position: absolute;
   padding-top: 5px;
-  height: 160vh;
+  height: 180vh;
   width: 100%;
   top: 10%;
   justify-content: flex-start;
@@ -1480,6 +1480,7 @@ input[type=submit]:hover {
   padding-top: 100px;
   padding-bottom: 20px;
   font-size: 40px;
+  text-align: center;
 }
 .about-container h2, p, h3 {
   line-height: 1.5;
