--- a/style.css
+++ b/style.css
@@ -656,7 +656,6 @@ a i{
   top: 100%;
   left: 0%;
   transform: translate(-0%, -100%);
-  border: 1px solid red;
 }
 
 .tips-col-p p{
@@ -1435,6 +1434,8 @@ a i{
   padding-right: 300px;
   font-size: 14px;
 }
+
+
 /* End - contact contact-form */
 
 /********************** contact contact-form *****************/
@@ -1463,6 +1464,269 @@ input[type=submit]:hover {
   color: white;
 }
 /* End contact contact-form */
+
+
+@media screen and (max-width: 1255px) {
+.contact-container {
+  background-color: #9ebc99;
+  padding: 20px;
+  position: absolute;
+  padding-top: 5px;
+  height: 1000px;
+  width: 100%;
+  top: 5%;
+  justify-content: flex-start;
+  flex-direction: column;
+
+}
+.contact-container h2 {
+  color: #1d322b;
+  text-align: left;
+  line-height: 1.5;
+  padding-top: 50px;;
+  padding-left: 10px;
+  padding-right: 150px;
+  float: left;
+}
+
+.contact-container h1 {
+  color: #1d322b;
+  line-height: 1.5;
+  text-align: center;
+}
+.contact-container form {
+  padding-top: 50px;
+  padding-left: 10px;
+  padding-right: 300px;
+  font-size: 14px;
+}
+
+input[type=text], select, textarea {
+  width: 100%;
+  min-width: 400px;
+  padding: 12px;
+  border: 1px solid #1d322b;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #4A235A;
+  color: #f4f4f4;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #8E44AD;
+  color: white;
+  }
+}
+
+
+@media screen and (max-width: 900px) {
+.contact-container {
+  background-color: #9ebc99;
+  padding: 20px;
+  position: absolute;
+  padding-top: 5px;
+  height: 120vh;
+  width: 100%;
+  top: 10%;
+  justify-content: flex-start;
+  flex-direction: column;
+
+}
+.contact-container h2 {
+  color: #1d322b;
+  text-align: left;
+  line-height: 1.5;
+  padding-top: 50px;;
+  padding-left: 10px;
+  padding-right: 10px;
+  float: left;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.contact-container h1 {
+  color: #1d322b;
+  line-height: 1.5;
+  text-align: left;
+  font-size: 20px;
+  min-width: 400px;
+  margin-bottom: 10px;
+}
+
+.contact-container form {
+  padding-top: 50px;
+  padding-left: 10px;
+  padding-right: 300px;
+  font-size: 14px;
+}
+
+input[type=text], select, textarea {
+  width: 100%;
+  min-width: 400px;
+  padding: 12px;
+  border: 1px solid #1d322b;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #4A235A;
+  color: #f4f4f4;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #8E44AD;
+  color: white;
+  }
+}
+
+@media screen and (max-width: 770px) {
+.contact-container {
+  background-color: #9ebc99;
+  padding: 20px;
+  position: absolute;
+  padding-top: 5px;
+  height: 120vh;
+  width: 100%;
+  top: 5%;
+  justify-content: flex-start;
+  flex-direction: column;
+
+}
+.contact-container h2 {
+  color: #1d322b;
+  text-align: left;
+  line-height: 1.5;
+  padding-top: 50px;;
+  padding-left: 10px;
+  padding-right: 150px;
+  float: left;
+}
+
+.contact-container h1 {
+  color: #1d322b;
+  line-height: 1.5;
+  text-align: center;
+}
+.contact-container form {
+  padding-top: 50px;
+  padding-left: 10px;
+  padding-right: 300px;
+  font-size: 14px;
+}
+
+input[type=text], select, textarea {
+  width: 100%;
+  min-width: 400px;
+  padding: 12px;
+  border: 1px solid #1d322b;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #4A235A;
+  color: #f4f4f4;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #8E44AD;
+  color: white;
+  }
+}
+
+
+@media screen and (max-width: 450px) {
+.contact-container {
+  background-color: #9ebc99;
+  padding: 0px;
+  position: absolute;
+  padding-top: 5px;
+  height: 140vh;
+  width: 100%;
+  top: 8%;
+  justify-content: flex-start;
+  flex-direction: column;
+
+}
+.contact-container h2 {
+  color: #1d322b;
+  text-align: left;
+  line-height: 1.5;
+  padding-top: 50px;;
+  padding-left: 3px;
+  padding-right: 3px;
+  float: left;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.contact-container h1 {
+  color: #1d322b;
+  line-height: 1.5;
+  text-align: left;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.contact-container form {
+  padding-top: 50px;
+  padding-left: 3px;
+  padding-right: 3px;
+  font-size: 14px;
+}
+
+input[type=text], select, textarea {
+  width: 100%;
+  min-width: 250px;
+  padding: 12px;
+  border: 1px solid #1d322b;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #4A235A;
+  color: #f4f4f4;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #8E44AD;
+  color: white;
+  }
+}
+
 
 /**************************** about page ***********************/
 .about-container {
