--- a/style.css
+++ b/style.css
@@ -51,13 +51,17 @@ body{
   display: inline;
 }
 
+.navbar > .links-navbar{
+  float: right;
+}
+
 .navbar > .links-navbar > a{
   display: inline-block;
   padding: 25px 30px 25px 20px;
   text-decoration: none;
   font-size: 20px;
   color: /*#1d322b*/ #FFFAFA;
-  float: right;
+  float: left;
 }
 
 .navbar > .links-navbar > a:hover{
