--- a/style.css
+++ b/style.css
@@ -459,7 +459,7 @@ body{
 @media screen and (max-width: 1100px) {
   .picture-wrapper{
     top: 50%;
-    left: 50%;
+    left: 30%;
     transform: translate(-50%, -85%);
     height: 40%;
     width: 80%;
@@ -509,7 +509,7 @@ body{
 
   .picture-wrapper{
     top: 50%;
-    left: 50%;
+    left: 30%;
     transform: translate(-50%, -85%);
     height: 40%;
     width: 80%;
@@ -539,8 +539,8 @@ body{
   }
   .picture-wrapper{
     top: 95%;
-    left: 50%;
-    transform: translate(-50%, -95%);
+    left: 0%;
+    transform: translate(-0%, -95%);
     height: 40%;
     width: 80%;
   }
@@ -575,8 +575,7 @@ body{
     top: 50%;
     left: 75%;
     transform: translate(-50%, -50%);
-    font-size: 9
-    0%;
+    font-size: 90%;
     padding-bottom: 50px;
   }
 }
@@ -604,9 +603,9 @@ body{
     font-size: 200%;
   }
   .picture-wrapper{
-    top: 90%;
+    top: 85%;
     left: 50%;
-    transform: translate(-50%, -90%);
+    transform: translate(-50%, -85%);
     height: 40%;
     width: 80%;
   }
@@ -641,7 +640,7 @@ body{
     top: 50%;
     left: 75%;
     transform: translate(-50%, -50%);
-    font-size: 60%;
+    font-size: 90%;
     padding-bottom: 50px;
   }
 }
@@ -705,7 +704,7 @@ body{
     top: 45%;
     left: 75%;
     transform: translate(-50%, -43%);
-    font-size: 30%;
+    font-size: 90%;
     padding-bottom: 50px;
   }
 }
@@ -1450,10 +1449,31 @@ body{
 .app-container p {
   font-size: 14px;
 }
-.app-img{
+
+.app-container ul {
+float: left;
+list-style: none;
+width: 100%;
+margin-top:20px;
+margin-bottom: 20px;
+}
+
+.app-container li {
+  text-decoration: none;
+  width: 19%;
+  display: inline-block;
+}
+
+.app-container img{
+  width: 90%;
+  border-radius: 3px;
+}
+
+
+/*.app-img{
   margin-left: 165px;
   border-radius: 2px;
-}
+}*/
 
 .app-text {
   width: 1050px;
@@ -1487,6 +1507,154 @@ body{
   border: none;
   color: white;
 }
+
+
+@media screen and (max-width: 1294px) {
+  .app-container {
+    background-color: #9ebc99;
+    padding: 20px;
+    position: absolute;
+    padding-top: 5px;
+    height: 200vh;
+    width: 100%;
+    top: 10%;
+    justify-content: flex-start;
+    flex-direction: column;
+    line-height: 1.5;
+  }
+  .app-container h1 {
+    color: #1d322b;
+    text-align: center;
+    margin-top: 50px;
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
+  .app-container p {
+    font-size: 14px;
+  }
+
+  .app-container ul {
+  float: left;
+  list-style: none;
+  width: 100%;
+  margin-top:20px;
+  margin-bottom: 20px;
+  }
+
+  .app-container li {
+    text-decoration: none;
+    width: 25%;
+    display: inline-block;
+  }
+
+  .app-container img{
+    width: 90%;
+    border-radius: 3px;
+  }
+
+
+  /*.app-img{
+    margin-left: 165px;
+    border-radius: 2px;
+  }*/
+
+  .app-text {
+    width: 1050px;
+    margin-top: 20px;
+    margin-left: 10px;
+  }
+
+  .app-text p{
+    margin-bottom:10px;
+  }
+
+  .app-text h3{
+    padding-bottom: 0px;
+  }
+  .download-button {
+    text-align: center;
+    font-style: italic;
+  }
+
+  .btn {
+    background-color: #4A235A;
+    border: none;
+    color: #f4f4f4;
+    padding: 12px 30px;
+    cursor: pointer;
+    font-size: 20px;
+    border-radius: 2px;
+  }
+  .btn:hover{
+    background-color: #8E44AD;
+    border: none;
+    color: white;
+  }
+
+@media screen and (max-width: 1122px) {
+.app-container {
+  background-color: #9ebc99;
+  padding: 20px;
+  position: absolute;
+  padding-top: 5px;
+  height: 200vh;
+  width: 100%;
+  top: 10%;
+  justify-content: flex-start;
+  flex-direction: column;
+  line-height: 1.5;
+}
+.app-container h1 {
+  color: #1d322b;
+  text-align: center;
+  margin-top: 50px;
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+.app-container p {
+  font-size: 14px;
+
+}
+
+.app-img{
+  margin-left: 10px;
+  border-radius: 2px;
+}
+
+.app-text {
+  width: 1050px;
+  margin-top: 20px;
+  margin-left: 10px;
+}
+
+.app-text p{
+  margin-bottom:10px;
+}
+
+.app-text h3{
+  padding-bottom: 0px;
+}
+.download-button {
+  text-align: center;
+  font-style: italic;
+}
+
+.btn {
+  background-color: #4A235A;
+  border: none;
+  color: #f4f4f4;
+  padding: 12px 30px;
+  cursor: pointer;
+  font-size: 20px;
+  border-radius: 2px;
+}
+.btn:hover{
+  background-color: #8E44AD;
+  border: none;
+  color: white;
+  }
+}
+
 /* End - app */
 
 /****************** contact contact-form ***************/
